Ensure that the scrollbar is always visible

--- a/src/styles/base/scrollbars.scss
+++ b/src/styles/base/scrollbars.scss
@@ -1,4 +1,6 @@
 @mixin custom-scrollbars {
+  overflow-y: scroll;
+
   $thumb-color: var(--background-opposite);
   $track-color: var(--background-highlights);
 
